--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ build-backend = "hatchling.build"
 requires = ["hatchling"]
 
 [project]
-authors = [{name = "REPLACE_NAME REPLACE_SURNAME"}]
+authors = [{name = "Alvaro Bartolome"}]
 classifiers = [
   "Development Status :: 4 - Beta",
   "Programming Language :: Python",
@@ -15,21 +15,21 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = []
-description = "REPLACE_PACKAGE_DESCRIPTION"
+description = "Serialize JAX and Flax structures with `safetensors`"
 dynamic = ["version"]
 keywords = []
 license = "MIT"
-name = "REPLACE_PACKAGE_NAME"
+name = "safejax"
 readme = "README.md"
 requires-python = ">=3.7"
 
 [project.urls]
-Documentation = "https://REPLACE_GITHUB_USERNAME.github.io/REPLACE_PACKAGE_NAME"
-Issues = "https://github.com/REPLACE_GITHUB_USERNAME/REPLACE_PACKAGE_NAME/issues"
-Source = "https://github.com/REPLACE_GITHUB_USERNAME/REPLACE_PACKAGE_NAME"
+Documentation = "https://alvarobartt.github.io/safejax"
+Issues = "https://github.com/alvarobartt/safejax/issues"
+Source = "https://github.com/alvarobartt/safejax"
 
 [tool.hatch.version]
-path = "src/REPLACE_PACKAGE_NAME/__init__.py"
+path = "src/safejax/__init__.py"
 
 [project.optional-dependencies]
 quality = [
@@ -44,7 +44,7 @@ tests = [
 
 [tool.hatch.envs.quality]
 dependencies = [
-  "REPLACE_PACKAGE_NAME[quality]"
+  "safejax[quality]"
 ]
 detached = true
 
@@ -61,7 +61,7 @@ format = [
 ]
 
 [tool.hatch.envs.test]
-dependencies = ["REPLACE_PACKAGE_NAME[tests]"]
+dependencies = ["safejax[tests]"]
 
 [tool.hatch.envs.test.scripts]
 run = "pytest tests/ --durations 0 -s"
