--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,10 +48,9 @@ tests = [
 ]
 
 [tool.hatch.envs.quality]
-dependencies = [
-  "safejax[quality]"
+features = [
+  "quality"
 ]
-detached = true
 
 [tool.hatch.envs.quality.scripts]
 check = [
@@ -66,7 +65,9 @@ format = [
 ]
 
 [tool.hatch.envs.test]
-dependencies = ["safejax[tests]"]
+features = [
+  "tests"
+]
 
 [tool.hatch.envs.test.scripts]
 run = "pytest tests/ --durations 0 -s"
