--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,11 +12,8 @@ repos:
       - id: isort
         language_version: python3
 
-  - repo: https://github.com/pycqa/flake8
-    rev: 4.0.1
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.0.192
     hooks:
-      - id: flake8
-        additional_dependencies:
-          - flake8-black>=0.3.3
-          - flake8-isort>=4.1.1
-        language_version: python3
+      - id: ruff
+        args: [--fix]
