--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -36,9 +36,8 @@ jobs:
 
       - name: check-quality
         run: |
-          flake8 src tests
+          ruff src tests
           black --check --diff --preview src tests
-          isort --check-only --diff src tests
 
   run-tests:
     needs: check-quality
