--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,9 @@ Source = "https://github.com/alvarobartt/safejax"
 [tool.hatch.version]
 path = "src/safejax/__init__.py"
 
+[tool.hatch.metadata]
+allow-direct-references = true
+
 [project.optional-dependencies]
 quality = [
   "black~=22.10.0",
@@ -45,6 +48,7 @@ quality = [
 tests = [
   "pytest~=7.1.2",
   "pytest-lazy-fixture~=0.6.3",
+  "flaxmodels @ git+https://github.com/matthias-wright/flaxmodels.git",
 ]
 
 [tool.hatch.envs.quality]
