👷🏻‍♂️ Run `ruff` and `black` over `benchmarks/` and `examples/`

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -36,8 +36,8 @@ jobs:
 
       - name: check-quality
         run: |
-          ruff src tests
-          black --check --diff --preview src tests
+          ruff src tests benchmarks examples
+          black --check --diff --preview src tests benchmarks examples
 
   run-tests:
     needs: check-quality
