📝 Add `docs/examples.md`

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,4 +52,5 @@ nav:
   - Installation: installation.md
   - Usage: usage.md
   - Why safejax?: why_safejax.md
+  - Examples: examples.md
   - License: license.md
