📝 Add `docs/api/save.md` and `docs/api/load.md`

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,4 +53,7 @@ nav:
   - Usage: usage.md
   - Why safejax?: why_safejax.md
   - Examples: examples.md
+  - Reference:
+    - safejax.load: api/load.md
+    - safejax.save: api/save.md
   - License: license.md
