➕ Add `dm-haiku` dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
   "jax~=0.3.25",
   "objax~=1.6.0",
   "flax~=0.6.2",
+  "dm-haiku~=0.0.9",
   "safetensors~=0.2.5",
 ]
 description = "Serialize JAX, Flax, Haiku, or Objax model params with `safetensors`"
