--- a/requirements/requirements-dev.txt
+++ b/requirements/requirements-dev.txt
@@ -7,6 +7,7 @@
 absl-py==1.3.0
     # via
     #   chex
+    #   dm-haiku
     #   optax
     #   orbax
     #   tensorboard
@@ -14,6 +15,8 @@ attrs==22.2.0
     # via pytest
 black==22.10.0
     # via safejax (pyproject.toml)
+build==0.9.0
+    # via pip-tools
 cached-property==1.5.2
     # via orbax
 cachetools==5.2.0
@@ -27,7 +30,9 @@ charset-normalizer==2.1.1
 chex==0.1.5
     # via optax
 click==8.1.3
-    # via black
+    # via
+    #   black
+    #   pip-tools
 commonmark==0.9.1
     # via rich
 contourpy==1.0.6
@@ -36,6 +41,8 @@ cycler==0.11.0
     # via matplotlib
 distlib==0.3.6
     # via virtualenv
+dm-haiku==0.0.9
+    # via safejax (pyproject.toml)
 dm-tree==0.1.8
     # via chex
 etils==0.9.0
@@ -83,6 +90,8 @@ jaxlib==0.3.25
     #   optax
     #   orbax
     #   safejax (pyproject.toml)
+jmp==0.0.2
+    # via dm-haiku
 kiwisolver==1.4.4
     # via matplotlib
 markdown==3.4.1
@@ -101,9 +110,11 @@ numpy==1.24.1
     # via
     #   chex
     #   contourpy
+    #   dm-haiku
     #   flax
     #   jax
     #   jaxlib
+    #   jmp
     #   matplotlib
     #   objax
     #   opt-einsum
@@ -124,16 +135,21 @@ orbax==0.0.23
     # via flax
 packaging==22.0
     # via
+    #   build
     #   matplotlib
     #   pytest
 parameterized==0.8.1
     # via objax
 pathspec==0.10.3
     # via black
+pep517==0.13.0
+    # via build
 pillow==9.3.0
     # via
     #   matplotlib
     #   objax
+pip-tools==6.12.1
+    # via safejax (pyproject.toml)
 platformdirs==2.6.0
     # via
     #   black
@@ -186,6 +202,8 @@ six==1.16.0
     # via
     #   google-auth
     #   python-dateutil
+tabulate==0.9.0
+    # via dm-haiku
 tensorboard==2.11.0
     # via objax
 tensorboard-data-server==0.6.1
@@ -201,6 +219,8 @@ toml==0.10.2
 tomli==2.0.1
     # via
     #   black
+    #   build
+    #   pep517
     #   pytest
 toolz==0.12.0
     # via chex
@@ -217,11 +237,14 @@ virtualenv==20.17.1
 werkzeug==2.2.2
     # via tensorboard
 wheel==0.38.4
-    # via tensorboard
+    # via
+    #   pip-tools
+    #   tensorboard
 zipp==3.11.0
     # via
     #   importlib-metadata
     #   importlib-resources
 
 # The following packages are considered to be unsafe in a requirements file:
+# pip
 # setuptools
