--- a/requirements/requirements-docs.txt
+++ b/requirements/requirements-docs.txt
@@ -7,6 +7,7 @@
 absl-py==1.3.0
     # via
     #   chex
+    #   dm-haiku
     #   optax
     #   orbax
     #   tensorboard
@@ -34,6 +35,8 @@ contourpy==1.0.6
     # via matplotlib
 cycler==0.11.0
     # via matplotlib
+dm-haiku==0.0.9
+    # via safejax (pyproject.toml)
 dm-tree==0.1.8
     # via chex
 etils==0.9.0
@@ -90,6 +93,8 @@ jinja2==3.1.2
     #   mkdocs
     #   mkdocs-material
     #   mkdocstrings
+jmp==0.0.2
+    # via dm-haiku
 kiwisolver==1.4.4
     # via matplotlib
 markdown==3.3.7
@@ -136,9 +141,11 @@ numpy==1.24.1
     # via
     #   chex
     #   contourpy
+    #   dm-haiku
     #   flax
     #   jax
     #   jaxlib
+    #   jmp
     #   matplotlib
     #   objax
     #   opt-einsum
@@ -230,6 +237,8 @@ six==1.16.0
     #   python-dateutil
 smmap==5.0.0
     # via gitdb
+tabulate==0.9.0
+    # via dm-haiku
 tensorboard==2.11.0
     # via objax
 tensorboard-data-server==0.6.1
