--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -7,6 +7,7 @@
 absl-py==1.3.0
     # via
     #   chex
+    #   dm-haiku
     #   optax
     #   orbax
     #   tensorboard
@@ -28,6 +29,8 @@ contourpy==1.0.6
     # via matplotlib
 cycler==0.11.0
     # via matplotlib
+dm-haiku==0.0.9
+    # via safejax (pyproject.toml)
 dm-tree==0.1.8
     # via chex
 etils==0.9.0
@@ -71,6 +74,8 @@ jaxlib==0.3.25
     #   optax
     #   orbax
     #   safejax (pyproject.toml)
+jmp==0.0.2
+    # via dm-haiku
 kiwisolver==1.4.4
     # via matplotlib
 markdown==3.4.1
@@ -85,9 +90,11 @@ numpy==1.24.1
     # via
     #   chex
     #   contourpy
+    #   dm-haiku
     #   flax
     #   jax
     #   jaxlib
+    #   jmp
     #   matplotlib
     #   objax
     #   opt-einsum
@@ -159,6 +166,8 @@ six==1.16.0
     # via
     #   google-auth
     #   python-dateutil
+tabulate==0.9.0
+    # via dm-haiku
 tensorboard==2.11.0
     # via objax
 tensorboard-data-server==0.6.1
