--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
   "flax~=0.6.2",
   "dm-haiku~=0.0.9",
   "safetensors~=0.2.5",
+  "fsspec~=2022.11.0",
 ]
 description = "Serialize JAX, Flax, Haiku, or Objax model params with `safetensors`"
 dynamic = ["version"]
